--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,13 @@
 
 .main-logo
     {
-        height: 50px;
-        width: 50px;
+        height: 100px;
+        width: 100px;
         background-image: url(https://picsum.photos/200/300.webp);
         background-size: cover;
         background-position: center;
         border-radius: 50%;
+        margin-left: 10px;
     }
 
 .banner-image
@@ -23,6 +24,7 @@
         background-image: url(https://picsum.photos/200/300.webp);
         background-size: cover;
         background-position: center;
+        margin: auto;
     }
 
 footer
