--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,154 @@
+body 
+{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+hr
+{
+    height: 3px;
+    background-color: black;
+}
+
+main
+{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 .main-header
-    {
+{
         display: flex;
         background-color: lightskyblue;
         border: 3px solid;
         border-color: tomato;
-    }
+        justify-content: space-between;
+}
 
 .main-logo
-    {
+ {
         height: 100px;
         width: 100px;
         background-image: url(https://picsum.photos/1080);
         background-size: cover;
         background-position: center;
         border-radius: 50%;
-        margin-left: 10px;
+        margin-left: 30px;
         margin-right: 10px;
         margin-top: 10px;
         margin-bottom: 10px;
         outline-style: dashed;
         outline-color: tomato;
         outline-offset: 3px;
-        border: 5px solid black;
-    }
+        border: 3px solid black;
+}
 
-    nav {
-        display: flex;
-        align-items: center;
-    }
+nav
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 30px;
+}
 
-    nav>a {
-        text-decoration: none;
-        color: black;
-        border: 3px solid;
-        padding: 5px;
-    }
+nav a
+{
+    text-decoration: none;
+    color: black;
+    background-color: tomato;
+    border: 3px;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+}
 
-.banner-image
-    {
-        width: 1366px;
-        height: 768px;
-        background-image: url(https://https://picsum.photos/1920/1080://p);
-        background-size: cover;
-        background-position: center;
-        margin: auto;
-    }
+nav a:hover
+{
+    background-color: darksalmon;
+}
+
+.slider 
+{
+    position: relative;
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+}
+
+.slider img
+{
+    width: 100%;
+    display: none;
+}
+
+img.displaySlide
+{
+    display: block;
+}
+
+
+
+#our-profile-section
+{
+    display: flex;
+    flex-direction: row;
+}
+
+#img-jkt
+{
+    height: 100px;
+    width: 100px;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/bf/Busway_in_Bundaran_HI.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    margin-left: 30px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    outline-style: dashed;
+    outline-color: tomato;
+    outline-offset: 3px;
+    border: 3px solid black;
+}
+
+#img-bdg
+{
+    height: 100px;
+    width: 100px;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/77/Gedung_Sate_Bandung_Jawa_Barat.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    margin-left: 30px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    outline-style: dashed;
+    outline-color: tomato;
+    outline-offset: 3px;
+    border: 3px solid black;
+}
+
+#img-sby
+{
+    height: 100px;
+    width: 100px;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/7e/Taman_suroboyo.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    margin-left: 30px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    outline-style: dashed;
+    outline-color: tomato;
+    outline-offset: 3px;
+    border: 3px solid black;
+}
 
 footer
-    {
-        text-align: end;
-    }
+{
+    text-align: end;
+}
