--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,9 @@ nav a:hover
 
 .slider img
 {
-    width: 100%;
+    width: 1366px;
+    height: 768px;
+    margin: auto;
     display: none;
 }
 
