--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ hr
     background-color: black;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 main
 {
     margin-left: 20px;
@@ -67,88 +71,110 @@ nav a:hover
     background-color: darksalmon;
 }
 
+
+
 .slider 
 {
     position: relative;
-    width: 100%;
-    margin: auto;
-    overflow: hidden;
-}
-
-.slider img
-{
     width: 1366px;
     height: 768px;
+    overflow: hidden;
     margin: auto;
-    display: none;
+    border: 3px tomato;
+    border-style: solid;
 }
 
-img.displaySlide
+.slides {
+
+    display: flex;
+    width: 100%;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide 
 {
-    display: block;
+    width: 100%;
+}
+
+.prev, .next 
+{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.prev 
+{
+    left: 10px;
+}
+
+.next 
+{
+    right: 10px;
 }
 
 
 
-#our-profile-section
+#profiles
 {
     display: flex;
     flex-direction: row;
 }
 
-#img-jkt
+#profiles img
 {
-    height: 100px;
-    width: 100px;
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/bf/Busway_in_Bundaran_HI.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
-    margin-left: 30px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    width: 150px;
+    height: 150px;
+    background-color: lightskyblue;
     outline-style: dashed;
     outline-color: tomato;
     outline-offset: 3px;
-    border: 3px solid black;
 }
 
-#img-bdg
+#profiles ul
 {
-    height: 100px;
-    width: 100px;
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/77/Gedung_Sate_Bandung_Jawa_Barat.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
-    margin-left: 30px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    outline-style: dashed;
-    outline-color: tomato;
-    outline-offset: 3px;
-    border: 3px solid black;
+    justify-content: center;
+    align-self: center;
 }
 
-#img-sby
+#portfolio-section
 {
-    height: 100px;
-    width: 100px;
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/7e/Taman_suroboyo.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
-    margin-left: 30px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    display: flex;
+}
+
+#portfolio-section img
+{
+    width: 300px;
+    margin: auto;
     outline-style: dashed;
     outline-color: tomato;
     outline-offset: 3px;
-    border: 3px solid black;
 }
+
+
+
+#message-section
+{
+    display: flex;
+}
+
+#visitors-profile
+{
+    margin-left: 100px;
+}
+
+.form-output
+{
+    align-self: center;
+}
+
+
 
 footer
 {
